--- a/listing/templates/listing/search.html
+++ b/listing/templates/listing/search.html
@@ -5,78 +5,91 @@
 
 {% block content %}
 <main class="mt-9">
-    <form method="GET" action="{% url 'listing:search_listing' %}" id="filter-form" class="filter flex gap-6 mb-8" x-data>
-        <input hidden type="search" name="search_query" value="{{ search_query }}" aria-label="Search" class="block w-full px-4 py-2 focus:outline-none">
-        <select name="listing_type" class="block  outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200 bg-white">
-            <option value="">Any</option>
-            <option value="buy" {% if listing_type == 'buy' %}selected{% endif %}>Buy</option>
-            <option value="rent" {% if listing_type == 'rent' %}selected{% endif %}>Rent</option>
-            <option value="land" {% if listing_type == 'land' %}selected{% endif %}>Land</option>
-        </select>
-    
-        <!-- for price -->
-        <div x-data="{ isOpen:false }" class="relative">
-            <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">Price</button>
-            
-            <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition class="absolute transition bg-white shadow-xl rounded-md p-4 z-50 top-full -left-10 md:left-1/2 min-w-[250px] w-auto">
-                <div>
-                    <label for="min_price">Min:</label>
-                    <input class="input-primary" type="number" name="min_price" value="{{ min_price }}">
-                </div>
-                <div>
-                    <label for="max_price">Max:</label>
-                    <input class="input-primary" type="number" name="max_price" value="{{ max_price }}">
-                </div>
-            </div>
-        </div>
-
-        <!-- for states -->
-        <div x-data="{ isOpen:false, states: [] }" x-init="states = window.nigerianStates" class="relative">
-            <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">States</button>
-    
-            <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition id="statesCheckBox" class="absolute transition bg-white shadow-xl rounded-md p-4 z-50 top-full -left-10 md:left-1/2 min-w-[250px] w-auto h-5/6">
-                <template x-if="states.length > 0">
-
-                    <template x-for="state in states" :key="state">
-                        <div>
-                            <input 
-                                type="radio" 
-                                :id="'radio-' + slugify(state)" 
-                                name="nigerian_state" 
-                                :value="state">
-                            <label 
-                                :for="'radio-' + slugify(state)" 
-                                x-text="state">
-                            </label>
-                        </div>
-                    </template>
-
-                </template>
-
-                <template x-if="states.length === 0">
-                    <p>Loading states...</p>
-                </template>
-            </div>
-        </div>
-
-        <!-- for lgas -->
-        <div x-data="{ isOpen:false }" class="relative">
-            <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">LGA</button>
-    
-            <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition id="lgasCheckBox" class="absolute transition bg-white shadow-xl rounded-md p-4 z-50 top-full -left-10 md:left-1/2 min-w-[250px] w-auto">
+    <form method="GET" action="{% url 'listing:search_listing' %}" id="filter-form" class="relative filter responsive-padding bg-white flex flex-col lg:flex-row lg:items-center gap-3 lg:gap-6  mb-8" x-data>
+        <div class="relative flex gap-6 justify-start py-2">
+            <input hidden type="search" name="search_query" value="{{ search_query }}" aria-label="Search" class="block w-full px-4 py-2 focus:outline-none">
+            <select name="listing_type" class="block font-semibold h-max outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200 bg-white">
+                <option value="">Any</option>
+                <option value="buy" {% if listing_type == 'buy' %}selected{% endif %}>Buy</option>
+                <option value="rent" {% if listing_type == 'rent' %}selected{% endif %}>Rent</option>
+                <option value="land" {% if listing_type == 'land' %}selected{% endif %}>Land</option>
+            </select>
+        
+            <!-- for price -->
+            <div x-data="{ isOpen:false }" class="relative">
+                <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">Price</button>
                 
+                <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition class="absolute transition bg-white shadow-[0px_4px_4px_0px_rgba(0,0,0,0.75)] rounded-md p-4 z-[100] top-full left-0 md:left-1/2 w-full min-w-[250px] ">
+                    <div>
+                        <label for="min_price">Min:</label>
+                        <input class="input-primary" type="number" name="min_price" value="{{ min_price }}">
+                    </div>
+                    <div>
+                        <label for="max_price">Max:</label>
+                        <input class="input-primary" type="number" name="max_price" value="{{ max_price }}">
+                    </div>
+                </div>
+            </div>
+
+            
+
+            <!-- for states -->
+            <div x-data="{ isOpen:false, states: [] }" x-init="states = window.nigerianStates" class="relative">
+                <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">States</button>
+        
+                <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition id="statesCheckBox" class="absolute transition bg-white shadow-xl rounded-md p-4 z-50 top-full min-w-[250px] w-auto flex flex-col gap-4">
+
+                <div class="flex flex-col gap-2">
+                    <label for="state_location" class="font-semibold">State</label>
+                    <select x-data="{ states: [] }" x-init="states = window.nigerianStates" id="state_location" name="state_location" class="block font-semibold h-max outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200 bg-white">
+                        <option value="">Any</option>
+                        <template x-if="states.length > 0">
+                            <template x-for="state in states" :key="state">
+        
+                                <option :value="slugify(state)" x-text="state" :selected="slugify(state) === '{{ selectedState }}'"></option>
+        
+                            
+                            </template>
+                        </template>
+                    </select>
+                </div>
+                    
+
+                    <div class="flex flex-col gap-2">
+                        <label for="lga_location" class="font-semibold">LGA</label>
+                        <select x-data="{ states: [] }" x-init="states = window.nigerianStates" id="lga_location" name="lga_location" class="block font-semibold h-max outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200 bg-white">
+                            <option value="">Any</option>
+                        </select>
+                    </div>
+                    
+
+                </div>
+            </div>
+
+            <!-- for lgas -->
+            <div x-data="{ isOpen:false }" class="relative">
+                <button @click="isOpen = !isOpen" class="font-semibold bg-white outline-1 outline-gray-600 px-4 py-1 rounded-lg hover:bg-gray-200" type="button">LGA</button>
+        
+                <div x-cloak x-show="isOpen" @click.away="isOpen = false" x-transition id="lgasCheckBox" class="absolute transition bg-white shadow-xl rounded-md p-4 z-50 top-full -left-10 md:left-1/2 min-w-[250px] w-auto">
+                    
+                </div>
             </div>
         </div>
-        {% component "button" html_tag="button" label="Apply" type="primary" width="max" function="submit" %} {% endcomponent %}
+        
+        {% component "button" html_tag="button" label="<i class='fa fa-filter'></i> Apply Fiters" type="primary" width="max" function="submit" extraclass="px-4 py-1" %} {% endcomponent %}
         
     </form>
 
 
     <div class="responsive-padding grid grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">   
     
-        {% for result in results %}
-        {% component "listing_card" title="{{result.title}}" price="{{result.price}}" size="{{result.size}}" type="{{result.listing_type}}" imageUrl="/media/{{result.cover_image}}" address="{{result.street_address}}, {{result.lga}}, {{result.state}}" %} {% endcomponent %}
-        {% endfor %}
+        {% if results %}
+            {% for result in results %}
+            {% component "listing_card" title="{{result.title}}" href="{% url 'listing:property_details' result.id %}" price="{{result.price}}" size="{{result.size}}" type="{{result.listing_type}}" imageUrl="/media/{{result.cover_image}}" address="{{result.street_address}}, {{result.lga}}, {{result.state}}" %} {% endcomponent %}
+            {% endfor %}
+        {% else %}
+            <p>No search result... </p>
+        {% endif %}
     </div>
 </main>
 
