--- a/components/listingCard/template.html
+++ b/components/listingCard/template.html
@@ -1,5 +1,5 @@
     <div class="relative mx-auto w-full rounded-xl shadow-[0px_4px_4px_0px_rgba(0,0,0,0.25)]">
-      <a href="#" class="relative inline-block w-full">
+      <a href="{{ href }}" class="relative inline-block w-full">
         <div class="rounded-lg bg-white shadow">
           <div class="relative flex h-52 justify-center overflow-hidden rounded-lg">
             <div class="w-full transform transition-transform duration-500 ease-in-out hover:scale-110">
