--- a/core/templates/core/index.html
+++ b/core/templates/core/index.html
@@ -45,34 +45,10 @@
             </div>
         </div>
     </section>
-
-    <section class="responsive-padding flex flex-col lg:flex-row responsive-padding gap-3 lg:justify-between">
-        <dl class="stats flex justify-start gap-10 items-center font-medium">
-            <div class="flex flex-col gap-4 items-center">
-                <dt class="text-6xl">200+</dt>
-                <dd class="text-gray-700">Satisfied customers</dd>
-            </div>
     
-            <div class="flex flex-col gap-4 items-center">
-                <dt class="text-6xl">10+</dt>
-                <dd class="text-gray-700">Years served</dd>
-            </div>
-        </dl>
-
-        <div class="partners">
-            <h4 class="font-bold">Our Partners</h4>
-            <div class="flex gap-4 *:h-16 *:w-16">
-                <img src="{% static 'images/slack-logo-svgrepo-com.svg' %}">
-                <img src="{% static 'images/tinder-1-logo-svgrepo-com.svg' %}">
-                <img src="{% static 'images/airbnb-2-logo-svgrepo-com.svg' %}">
-                <img src="{% static 'images/soundcloud-logo-svgrepo-com.svg' %}">
-                <img src="{% static 'images/coca-cola-logo-svgrepo-com.svg' %}">
-
-            </div>
-
-        </div>
-    </section>
-
+    <!-- Stats and Partner Section -->
+    {% component "stats_partner" %} {% endcomponent %}
+    
     <section class="relative bg-cover bg-center text-white py-4 lg:py-10 responsive-padding" 
     style="background-image: url('{% static 'images/house-duplex.jpg' %}');">
     
