--- a/core/templates/core/real_estate.html
+++ b/core/templates/core/real_estate.html
@@ -9,28 +9,39 @@
         <h1 class="text-white text-6xl text-center font-extrabold">Want a Property? Get One!</h1>
         <div>
             <!-- Search Bar -->
-            <div class="flex items-stretch w-full h-10 border border-gray-50 bg-slate-200/100 rounded-lg focus:ring-2 focus:ring-blue-500 hover:border-blue-500 transition">
-                <input type="search" class="block w-full px-4 py-2 focus:outline-none" 
+            <form method="GET" action="{% url 'listing:search_listing' %}" role="search" class="flex items-stretch w-full h-10 border border-gray-50 bg-slate-200/100 rounded-lg focus:ring-2 focus:ring-blue-500 hover:border-blue-500 transition">
+                <input type="search" name="search_query" aria-label="Search" class="block w-full px-4 py-2 focus:outline-none" 
                        placeholder="Search Location or Properties">
                 <button class="bg-blue-600 text-white h-full p-2 rounded-r-lg"><i class="fa fa-search fa-lg"></i></button>
+            </form>
+        </div>
+    </section>
+
+    <!-- Stats and Partner Section -->
+    {% component "stats_partner" %} {% endcomponent %}
+
+    {% if listings %}
+        <section class="flex flex-col gap-6 responsive-padding">
+            <h3 class="text-4xl font-semibold">Featured Listings</h3>
+
+            <div class="grid w-full grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
+                {% for result in listings %}
+                    {% component "listing_card" title="{{result.title}}" href="{% url 'listing:property_details' result.id %}" price="{{result.price}}" size="{{result.size}}" type="{{result.listing_type}}" imageUrl="/media/{{result.cover_image}}" address="{{result.street_address}}, {{result.lga}}, {{result.state}}" %} {% endcomponent %}
+                    
+                {% endfor %}
+                
+                {% comment %} {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
+                {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
+                {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
+                {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
+                {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
+                {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
+                {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
+                {% endcomment %}
             </div>
-        </div>
-    </section>
-
-    <section class="flex flex-col gap-6 responsive-padding">
-        <h3 class="text-4xl font-semibold">Featured Listings</h3>
-
-        <div class="grid w-full grid-cols-1 gap-6 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4">
-            {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
-            {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
-            {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
-            {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
-            {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
-            {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
-            {% component "listing_card" title="Bedroom at Transikis" price="3,000,000" size="2,000" type="Buy" imageUrl="{% static 'images/fbd51ea.jpeg'%}" address="Onitsha, Anambra" %} {% endcomponent %}
-            
-        </div>
-    </section>
+        </section>
+    {% endif %}
+    
 
     <section class="py-8 responsive-padding">
         <h3 class="text-4xl font-semibold mb-6">Popular Cities</h3>
